unpackaged/objects/Country__c.object
<CustomObject>
  <fields>
    <fullName>Region__c</fullName>
    <description>To split up RCO's</description>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>APAC</fullName>
        </value>
        <value>
          <fullName>DACH</fullName>
        </value>
        <value>
          <fullName>NORTHERN EU</fullName>
        </value>
        <value>
          <fullName>LATAM</fullName>
        </value>
        <value>
          <fullName>SOUTHERN EU</fullName>
        </value>
        <value>
          <fullName>NAM</fullName>
        </value>
        <value>
          <fullName>EASTERN EU</fullName>
        </value>
        <value>
          <fullName>ASIA</fullName>
          <isActive>false</isActive>
          <label>ASIA</label>
        </value>
        <value>
          <fullName>AU/NZ</fullName>
          <isActive>false</isActive>
          <label>AU/NZ</label>
        </value>
        <value>
          <fullName>CANADA</fullName>
          <isActive>false</isActive>
          <label>CANADA</label>
        </value>
        <value>
          <fullName>CEE</fullName>
          <isActive>false</isActive>
          <label>CEE</label>
        </value>
        <value>
          <fullName>CIS</fullName>
          <isActive>false</isActive>
          <label>CIS</label>
        </value>
        <value>
          <fullName>Germany and Austria</fullName>
          <isActive>false</isActive>
          <label>Germany and Austria</label>
        </value>
        <value>
          <fullName>INDIA</fullName>
          <isActive>false</isActive>
          <label>INDIA</label>
        </value>
        <value>
          <fullName>JAPAN</fullName>
          <isActive>false</isActive>
          <label>JAPAN</label>
        </value>
        <value>
          <fullName>MEA</fullName>
          <isActive>false</isActive>
          <label>MEA</label>
        </value>
        <value>
          <fullName>NORDICS</fullName>
          <isActive>false</isActive>
          <label>NORDICS</label>
        </value>
        <value>
          <fullName>USA</fullName>
          <isActive>false</isActive>
          <label>USA</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>SBU_Information__c</fullName>
    <description>Select any SBU using SFDC</description>
    <inlineHelpText>Select any SBU using SFDC</inlineHelpText>
    <label>SBU Information</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Consumables</fullName>
          <isActive>false</isActive>
          <label>Consumables</label>
        </value>
        <value>
          <fullName>Consumables_direct</fullName>
          <label>Consumables Direct</label>
        </value>
        <value>
          <fullName>Consumables Hybrid</fullName>
        </value>
        <value>
          <fullName>Consumables Indirect</fullName>
        </value>
        <value>
          <fullName>Digital</fullName>
          <isActive>false</isActive>
          <label>Digital</label>
        </value>
        <value>
          <fullName>Digital_direct</fullName>
          <label>Digital Direct</label>
        </value>
        <value>
          <fullName>Digital Hybrid</fullName>
        </value>
        <value>
          <fullName>Digital Indirect</fullName>
        </value>
        <value>
          <fullName>Equipment</fullName>
          <isActive>false</isActive>
          <label>Equipment</label>
        </value>
        <value>
          <fullName>Equipment_direct</fullName>
          <label>Equipment Direct</label>
        </value>
        <value>
          <fullName>Equipment Hybrid</fullName>
        </value>
        <value>
          <fullName>Equipment Indirect</fullName>
        </value>
        <value>
          <fullName>Implants</fullName>
          <isActive>false</isActive>
          <label>Implants</label>
        </value>
        <value>
          <fullName>Implants_direct</fullName>
          <label>Implants Direct</label>
        </value>
        <value>
          <fullName>Implants Hybrid</fullName>
        </value>
        <value>
          <fullName>Implants Indirect</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>SFDCUsers__c</fullName>
    <inlineHelpText>Number of active users in August. Updated by Katarina Eckebrant each year in August.</inlineHelpText>
    <label># SFDC Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>SFDC_Sales_Platform__c</fullName>
    <label>SFDC Sales Platform</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>ONE_SFDC_Sales_Platform</valueSetName>
    </valueSet>
  </fields>
  <fields>
    <fullName>SMSPL__c</fullName>
    <label>SMS</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Live - In Production</fullName>
        </value>
        <value>
          <fullName>Implementation in Progress</fullName>
        </value>
        <value>
          <fullName>Planned for Future 0 - 6 Months</fullName>
        </value>
        <value>
          <fullName>Planned for Future - Greater than 6 Months</fullName>
        </value>
        <value>
          <fullName>Not Applicable</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>SalesCloud__c</fullName>
    <label>Sales Cloud</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Yes</fullName>
        </value>
        <value>
          <fullName>No</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>ServiceCloud__c</fullName>
    <label>Service Cloud</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Yes</fullName>
        </value>
        <value>
          <fullName>No</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>SiroForce_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SiroForce Integration</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Smartsolve_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Smartsolve Integration</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Sms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>SubRCO__c</fullName>
    <label>Sub-RCO</label>
    <type>Picklist</type>
    <valueSet>
      <controllingField>RCO__c</controllingField>
      <restricted>true</restricted>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>AT</fullName>
        </value>
        <value>
          <fullName>AUNZ</fullName>
        </value>
        <value>
          <fullName>BNL</fullName>
        </value>
        <value>
          <fullName>CA</fullName>
        </value>
        <value>
          <fullName>CEE</fullName>
        </value>
        <value>
          <fullName>CH</fullName>
        </value>
        <value>
          <fullName>CIS</fullName>
        </value>
        <value>
          <fullName>CN</fullName>
        </value>
        <value>
          <fullName>DE</fullName>
        </value>
        <value>
          <fullName>FR</fullName>
        </value>
        <value>
          <fullName>IB</fullName>
        </value>
        <value>
          <fullName>IN</fullName>
        </value>
        <value>
          <fullName>IT</fullName>
        </value>
        <value>
          <fullName>JP</fullName>
        </value>
        <value>
          <fullName>KR</fullName>
        </value>
        <value>
          <fullName>LA</fullName>
        </value>
        <value>
          <fullName>MENA</fullName>
          <label>MEA</label>
        </value>
        <value>
          <fullName>Nordics</fullName>
        </value>
        <value>
          <fullName>SP</fullName>
        </value>
        <value>
          <fullName>UK/IR</fullName>
        </value>
        <value>
          <fullName>USA</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>TableauCRM__c</fullName>
    <inlineHelpText>Formerly known as Einstein Analytics</inlineHelpText>
    <label>Tableau CRM</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Yes</fullName>
        </value>
        <value>
          <fullName>No</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Total_Users__c</fullName>
    <label># Total users</label>
    <summarizedField>SBU_Information__c.User_Total__c</summarizedField>
    <summaryForeignKey>SBU_Information__c.Country__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
  </fields>
  <fields>
    <fullName>WebToCasePL__c</fullName>
    <label>Web To Case</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Live - In Production</fullName>
        </value>
        <value>
          <fullName>Implementation in Progress</fullName>
        </value>
        <value>
          <fullName>Planned for Future 0 - 6 Months</fullName>
        </value>
        <value>
          <fullName>Planned for Future - Greater than 6 Months</fullName>
        </value>
        <value>
          <fullName>Not Applicable</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Web_to_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Web to Case</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>X3rd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Access to 3rd party data</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>eloqua_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eloqua Integration</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>features__c</fullName>
    <description>Used to track features in use by the country</description>
    <label>Features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>Account</fullName>
          <isActive>false</isActive>
          <label>Account</label>
        </value>
        <value>
          <fullName>Account Receivables</fullName>
          <isActive>false</isActive>
          <label>Account Receivables</label>
        </value>
        <value>
          <fullName>Activities</fullName>
          <isActive>false</isActive>
          <label>Activities</label>
        </value>
        <value>
          <fullName>Assets</fullName>
          <isActive>false</isActive>
          <label>Assets</label>
        </value>
        <value>
          <fullName>Campaign (inc. speaker engagements)</fullName>
          <isActive>false</isActive>
          <label>Campaign</label>
        </value>
        <value>
          <fullName>Case</fullName>
          <isActive>false</isActive>
          <label>Case</label>
        </value>
        <value>
          <fullName>Consignment Stock</fullName>
          <isActive>false</isActive>
          <label>Consignment Stock</label>
        </value>
        <value>
          <fullName>Contact</fullName>
          <isActive>false</isActive>
          <label>Contact</label>
        </value>
        <value>
          <fullName>Contracts</fullName>
          <isActive>false</isActive>
          <label>Contracts</label>
        </value>
        <value>
          <fullName>Cvent Integration</fullName>
        </value>
        <value>
          <fullName>Eloqua Integration</fullName>
        </value>
        <value>
          <fullName>ETM</fullName>
          <isActive>false</isActive>
          <label>ETM</label>
        </value>
        <value>
          <fullName>Geopinte</fullName>
        </value>
        <value>
          <fullName>GeoPointe</fullName>
          <isActive>false</isActive>
          <label>GeoPointe</label>
        </value>
        <value>
          <fullName>Homepage</fullName>
          <isActive>false</isActive>
          <label>Homepage</label>
        </value>
        <value>
          <fullName>Internal Orders</fullName>
          <isActive>false</isActive>
          <label>Internal Orders</label>
        </value>
        <value>
          <fullName>KOL Management</fullName>
        </value>
        <value>
          <fullName>Leads</fullName>
          <isActive>false</isActive>
          <label>Leads</label>
        </value>
        <value>
          <fullName>Locations</fullName>
          <isActive>false</isActive>
          <label>Locations</label>
        </value>
        <value>
          <fullName>Marketing (Eloqua)</fullName>
        </value>
        <value>
          <fullName>Marketing Activity (Eloqua Integration)</fullName>
          <isActive>false</isActive>
          <label>Marketing Activity (Eloqua Integration)</label>
        </value>
        <value>
          <fullName>Networks</fullName>
          <isActive>false</isActive>
          <label>Networks</label>
        </value>
        <value>
          <fullName>Opportunities</fullName>
          <isActive>false</isActive>
          <label>Opportunities</label>
        </value>
        <value>
          <fullName>Order (inc. pricebooks)</fullName>
          <isActive>false</isActive>
          <label>Order (inc. pricebooks)</label>
        </value>
        <value>
          <fullName>Products</fullName>
          <isActive>false</isActive>
          <label>Products</label>
        </value>
        <value>
          <fullName>Service Console</fullName>
          <isActive>false</isActive>
          <label>Service Console</label>
        </value>
        <value>
          <fullName>SiroForce Integration</fullName>
        </value>
        <value>
          <fullName>Trackwise</fullName>
        </value>
        <value>
          <fullName>X-SBU Prospecting</fullName>
          <isActive>false</isActive>
          <label>X-SBU Prospecting</label>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>general_information__c</fullName>
    <inlineHelpText>Add additional information about the country</inlineHelpText>
    <label>General information</label>
    <length>32768</length>
    <type>LongTextArea</type>
  </fields>
  <fields>
    <fullName>ofERPs__c</fullName>
    <description>Enter how many ERP systems that is in use for the country currently</description>
    <inlineHelpText>Enter how many ERP systems that is in use for the country currently</inlineHelpText>
    <label># of ERPs</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>of_Active_Users__c</fullName>
    <inlineHelpText>Number of active users in August. Updated by Katarina Eckebrant each year in August.</inlineHelpText>
    <label># of Active Users</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <label>Countries</label>
  <listViews>
    <fullName>APAC</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CRM_Analyst__c</columns>
    <columns>CTIPL__c</columns>
    <columns>LocalCRMAnalyst__c</columns>
    <columns>SalesCloud__c</columns>
    <columns>ServiceCloud__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>RCO__c</field>
      <operation>equals</operation>
      <value>APAC</value>
    </filters>
    <label>APAC</label>
    <language>en_US</language>
  </listViews>
  <listViews>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Country_Manager__c</columns>
    <columns>CRM_Analyst__c</columns>
    <columns>Platform__c</columns>
    <columns>RCO__c</columns>
    <columns>Region__c</columns>
    <columns>SBU_Information__c</columns>
    <columns>ERP_Company_Code__c</columns>
    <columns>SFDCUsers__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
    <sharedTo>
      <role>Dentsply_IH_CEO</role>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>All_Countries</fullName>
    <columns>NAME</columns>
    <columns>RCO__c</columns>
    <columns>Region__c</columns>
    <columns>SBU_Information__c</columns>
    <columns>CRM_Analyst__c</columns>
    <columns>Country_Manager__c</columns>
    <columns>SFDCUsers__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Countries</label>
    <language>en_US</language>
    <sharedTo>
      <role>Dentsply_IH_CEO</role>
    </sharedTo>
  </listViews>
  <listViews>
    <fullName>Americas_Countries</fullName>
    <columns>NAME</columns>
    <columns>SFDCUsers__c</columns>
    <columns>of_Active_Users__c</columns>
    <columns>Total_Users__c</columns>
    <columns>Country_Manager__c</columns>
    <columns>CRM_Analyst__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>OWNER.LAST_NAME</field>
      <operation>equals</operation>
      <value>Sagendorph</value>
    </filters>
    <label>Americas Countries</label>
  </listViews>
  <listViews>
    <fullName>EMEA_Countries</fullName>
    <columns>RCO__c</columns>
    <columns>SubRCO__c</columns>
    <columns>Region__c</columns>
    <columns>NAME</columns>
    <columns>HUB__c</columns>
    <columns>of_Active_Users__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
      <field>Region__c</field>
      <operation>equals</operation>
      <value>CEE,CIS,Germany and Austria,INDIA,MEA,NORTHERN EU,NORDICS,SOUTHERN EU</value>
    </filters>
    <label>EMEA Countries</label>
    <language>en_US</language>
  </listViews>
  <nameField>
    <label>Country Name</label>
    <type>Text</type>
  </nameField>
  <pluralLabel>Countries</pluralLabel>
  <sharingModel>Private</sharingModel>
</CustomObject>